<?xml version="1.0"?>
<package>
  <name>kacanopen</name>
  <version>0.1.0</version>
  <description>
    KaCanOpen: An Open Plug&amp;Play CANopen Stack for ROS in Modern C++
  </description>
  <author email="thomas.keh@student.kit.edu">Thomas Keh</author>
  <maintainer email="milan@thekobi.com">Milan Vukov</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/KITmedical/kacanopen</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
    <third_party/>
  </export>
</package>
